[package]
name = "ed25519-zebra"
# Before publishing:
# - update CHANGELOG.md
# - update html_root_url
version = "2.2.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/ZcashFoundation/ed25519-zebra"
description = "Zcash-flavored Ed25519 for use in Zebra."

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
hex = { version = "0.4", default-features = false }
#sha2 = { version = "0.9", default-features = false }
sha512 = { git = "https://gitlab.com/microengineer18/rust-sha512" }
#thiserror = { version = "1", default-features = false }
curve25519-dalek = { path = "../curve25519-dalek", version = "3", default-features = false, features=["u32_backend"] }
zeroize = { version = "1.1", default-features = false }


[features]
nightly = []
default = []

